--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "iD",
-  "version": "1.9.2",
-  "description": "A friendly editor for OpenStreetMap",
+  "name": "openMod.sh",
+  "version": "0.0.1dev",
+  "description": "Open Energy Model Schleswig-Holstein",
   "main": "iD.js",
   "directories": {
     "doc": "docs",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/openstreetmap/iD.git"
+    "url": "git://github.com/openmodsh"
   },
   "keywords": [
     "editor",
