--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ npm-debug.log
 dist/*.js
 dist/*.css
 dist/img/*.svg
+dist/locales/en.json
 data/data.js
 data/feature-icons.json
 data/presets.yaml
@@ -12,4 +13,3 @@ data/presets/categories.json
 data/presets/fields.json
 data/presets/presets.json
 data/taginfo.json
-
