--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ transifex.auth
 node_modules
 npm-debug.log
 dist/*.js
+!dist/custom_widgets.js
 dist/*.css
 dist/img/*.svg
 dist/locales/en.json
@@ -13,3 +14,4 @@ data/presets/categories.json
 data/presets/fields.json
 data/presets/presets.json
 data/taginfo.json
+sftp-config.json
