--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/openmodsh"
+    "url": "git://github.com/energiekollektiv/openmod.sh-id"
   },
   "keywords": [
     "editor",
