Scenario drawcolor changes     - Now loads after all entites ready     - Loads data from the context

--- a/data/core.yaml
+++ b/data/core.yaml
@@ -322,9 +322,12 @@ en:
     relations:
       description: Relation
       tooltip: empty
+    none: 
+      description: None
+      tooltip: empty
   scenario_ways_setting:
-    installed_power:
-      description: Installed Power
+    I:
+      description: I
       tooltip: Tooltip
     efficiency:
       description: Efficiency
